# api/docs/swagger.json
@@ -491,7 +491,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Bitta PDF faylga bir nechta JPG rasmlarni birlashtiradi",
+                "description": "Bir nechta JPG fayllarni bitta PDF faylga aylantirish",
                 "consumes": [
                     "application/json"
                 ],
@@ -499,17 +499,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "pdf-jpg-to-pdf"
+                    "jpg-to-pdf"
                 ],
-                "summary": "Convert multiple JPG files to single PDF",
+                "summary": "Convert JPG to PDF",
                 "parameters": [
                     {
-                        "description": "List of image file IDs",
+                        "description": "JPG to PDF request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateJpgToPdfRequest"
+                            "$ref": "#/definitions/models.CreateJPGToPDFRequest"
                         }
                     }
                 ],
@@ -545,14 +545,14 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Yaratilgan JPG to PDF job holatini olish",
+                "description": "JPG to PDF konversiya ishining holatini olish",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "pdf-jpg-to-pdf"
+                    "jpg-to-pdf"
                 ],
-                "summary": "Get JPG to PDF job status",
+                "summary": "Get JPG to PDF job",
                 "parameters": [
                     {
                         "type": "string",
@@ -566,7 +566,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.JpgToPdfJob"
+                            "$ref": "#/definitions/models.JPGToPDFJob"
                         }
                     },
                     "404": {
@@ -2317,14 +2317,14 @@
                 }
             }
         },
-        "models.CreateJpgToPdfRequest": {
+        "models.CreateJPGToPDFRequest": {
             "type": "object",
             "required": [
-                "image_file_ids"
+                "input_file_ids"
             ],
             "properties": {
-                "image_file_ids": {
-                    "description": "JPG fayllarning ID’lari",
+                "input_file_ids": {
+                    "description": "JPG fayllar bir nechta bo‘ladi",
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -2567,7 +2567,7 @@
                 }
             }
         },
-        "models.JpgToPdfJob": {
+        "models.JPGToPDFJob": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -2576,7 +2576,7 @@
                 "id": {
                     "type": "string"
                 },
-                "image_file_ids": {
+                "input_file_ids": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -2586,7 +2586,6 @@
                     "type": "string"
                 },
                 "status": {
-                    "description": "pending, done, failed",
                     "type": "string"
                 },
                 "user_id": {
